force-app/main/default/objects/Survey_Template_Config__mdt/Survey_Template_Config__mdt.object-meta.xml
<CustomObject>
    <label>Survey Template Config</label>
    <pluralLabel>Survey Template Configs</pluralLabel>
</CustomObject>