force-app/main/default/objects/Survey_Template_Config__mdt/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <label>Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto</label>
            </value>
            <value>
                <fullName>Total Loss</fullName>
            </value>
            <value>
                <fullName>Service Centre</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>