force-app/main/default/objects/Survey_Template_Config__mdt/fields/logoId__c.field-meta.xml
<CustomField>
    <fullName>logoId__c</fullName>
    <label>logoId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>