force-app/main/default/objects/Survey_Template_Config__mdt/fields/Policy_Issuing_Groups__c.field-meta.xml
<CustomField>
    <fullName>Policy_Issuing_Groups__c</fullName>
    <label>Policy Issuing Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>