force-app/main/default/objects/Survey_Template_Config__mdt/fields/Survey_Environment_Variable__c.field-meta.xml
<CustomField>
    <fullName>Survey_Environment_Variable__c</fullName>
    <label>Survey Environment Variable</label>
    <referenceTo>Survey_Environment_Variable__mdt</referenceTo>
    <relationshipLabel>Survey Template Configs</relationshipLabel>
    <relationshipName>Survey_Template_Configs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>