force-app/main/default/objects/Survey_Template_Config__mdt/fields/TemplateNameEN__c.field-meta.xml
<CustomField>
    <fullName>TemplateNameEN__c</fullName>
    <label>TemplateNameEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>