force-app/main/default/objects/Survey_Template_Config__mdt/fields/TemplateNameFR__c.field-meta.xml
<CustomField>
    <fullName>TemplateNameFR__c</fullName>
    <label>TemplateNameFR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>